# jitcert

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
jitcert-core/: CHANGELOG.md  JitCert.cabal  LICENSE  README.md  cabal.project  shell.nix  stack.yaml  test.c
jitcert-core/doc/: Makefile  haskellListings.tex  main.tex  refs.bib
jitcert-core/fips/: Main.hs
jitcert-core/fips/FIPS/: Context.hs  Property.hs
jitcert-core/src/: Main.hs
jitcert-core/src/JitCert/: Analysis.hs  Context.hs  DocGenerator.hs  Docs.hs  DotBackend.hs  Evidence.hs  FIPS.hs  GSN.hs  GSNAnalysis.hs  Internal.hs  Logic.hs  Nlp2Dsl.hs  Properties.hs  Query.hs  Solution.hs  SpecificationLang.hs
jitcert-core/src/JitCert/DocGenerator/: Types.hs
jitcert-core/src/JitCert/Docs/: FunctionsCorrect.hs  ProgramIsSafe.hs  ProgramIsSafeSimplified.hs  Shared.hs  UnboundError.hs
jitcert-core/src/JitCert/Examples/: OpenSSL.hs  UTM.hs
jitcert-core/src/JitCert/FIPS/: Combinators.hs
jitcert-core/src/JitCert/GSN/: Builder.hs  Combinators.hs  Internal.hs  Types.hs
jitcert-core/src/JitCert/GSN/Builder/: Internal.hs
jitcert-core/src/JitCert/UTM/: Combinators.hs  Context.hs  Evidence.hs  Solution.hs
jitcert-core/tests/: Analysis.hs  Lookup.hs  Main.hs  Query.hs
jitcert-web/: README.md  jitcert-web.cabal  stack.yaml
jitcert-web/app/: DevelMain.hs  devel.hs
jitcert-web/config/: keter.yml  models  routes  settings.yml  test-settings.yml
jitcert-web/nlp/: fipsig.entities  generator.py  helper.py  nlp2Dsl.py  noun_phrases_fipsig  relations  spacyhelper.py
jitcert-web/src/: Application.hs  Foundation.hs  GSN.hs  Import.hs  Model.hs  Types.hs
jitcert-web/src/GSN/: GHC.hs  JSON.hs
jitcert-web/src/Handler/: GSN.hs  Home.hs
jitcert-web/src/Handler/GSN/: Edit.hs  New.hs  Refresh.hs  Text.hs
jitcert-web/static/css/: gsn.css
jitcert-web/static/js/: gsn.js  vis-network.min.js
jitcert-web/templates/: default-layout-wrapper.hamlet  default-layout.hamlet
